fixed overflow on project cards

--- a/styles/style.css
+++ b/styles/style.css
@@ -67,10 +67,6 @@ body
   width: 48%;
 }
 
-.projectCard
-{
-  height: 550px;
-}
 
 @media (max-width: 768px) 
 {
